# oxidellm

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
rag/: index.json
rag/documents/: oxidellm.txt
src/: main.rs
src/api/: server.rs
src/engine/: cache.rs  candle_backend.rs  gguf.rs  metrics.rs  mod.rs  model.rs  rag.rs  sampler.rs  tokenizer.rs
